<resources>
    <string name="myInfo">My Account Information:</string>
    <string name="myReservations">My Reservations:</string>
    <string name="reservationAvailability">Reservation Availability:</string>
    <string name="endDateSection">End Time: </string>
    <string name="byPriceMin">By Price Min</string>
    <string name="byPriceMax">By Price Max</string>
    <string name="startDateSection">Start Time: </string>
    <string name="instructionsVPA">Parking Instructions: </string>
    <string name="createSpot">Create Listing</string>
    <string name="myProfile">My Profile</string>
    <string name="signout">Sign Out</string>
    <string name="priceViewPSpot">Price: </string>
    <string name="locatedAt">Located at: </string>
    <string name="spotLister">Lister: </string>
    <string name="fullSizeImageDescription">Full Sized Parking Spot Image</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="reserveButton">Reserve</string>
    <string name="viewProfile">View Profile</string>
    <string name="location">Location</string>
    <string name="datesAvailable">Dates Available</string>
    <string name="parkingSpotImage">Parking Spot Image</string>
    <string name="meridiem">meridiem</string>
    <string name="firstName">First Name</string>
    <string name="middleName">Middle Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone #</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="app_name">myParkSpot</string>
    <string name="address">Address</string>
    <string name="street">street #/name</string>
    <string name="state">state</string>
    <string name="city">city</string>
    <string name="zip">zip</string>
    <string name="cont">continue</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="price">price</string>
    <string name="instructions">instructions</string>
    <string name="no_internet_connection">No Internet Connection. Reconnect and try again.</string>
    <string name="unknown_error">Something went wrong during the Sign-in process.</string>
    <string name="unknown_sign_in_response">Sign-in response unknown.</string>
    <string name="sign_in_success">Successful sign-in!</string>
    <string name="title_activity_date_time">DateTimeActivity</string>
    <string name="hour">hour</string>
    <string name="finishSigningUp">Finish Signing Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    // spinner items
    <string-array name="hour_array">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </string-array>
    <string-array name="meridiem_array">
        <item>am</item>
        <item>pm</item>
    </string-array>
    <string-array name="year_array">
        <item>2017</item>
        <item>2018</item>
    </string-array>
    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="day_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
