<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cs121.myparkspot.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/middleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/middleName"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastName"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

<<<<<<< HEAD
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:layout_marginBottom="10dp"/>
=======
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textAlignment="center"
        android:textSize="24sp" />
>>>>>>> small changes with string and formtatting stuff.

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/street"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="textPersonName"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/zip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zip"
            android:inputType="number"
            android:layout_marginBottom="10dp"/>

        <Space android:layout_height="10dp"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/finish_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishSigningUp"
            android:background="@drawable/designed_button"
            android:layout_gravity="center"/>
    </LinearLayout>
</ScrollView>