<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_pricemin"
        android:orderInCategory="100"
        android:title="@string/byPriceMin"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
    <item
        android:id="@+id/action_pricemax"
        android:orderInCategory="100"
        android:title="@string/byPriceMax"
        app:showAsAction="never"
        android:visible="true"
        android:checkable="true"/>
</menu>