<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/possible_background_1500" >


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="casual"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="30sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="casual"/>

    </LinearLayout>


</LinearLayout>