<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:descendantFocusability="blocksDescendants"
    android:background="@drawable/shadow_border">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/parkingSpotImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="4dp"
<<<<<<< HEAD
            android:layout_marginStart="5dp"
=======
>>>>>>> small changes with string and formtatting stuff.
            android:adjustViewBounds="true"
            android:contentDescription="@string/parkingSpotImage"
            android:maxHeight="128dp"
            android:maxWidth="128dp"
            android:scaleType="fitXY"
            app:srcCompat="@android:drawable/ic_menu_myplaces"
            android:layout_marginRight="5dp" />
<<<<<<< HEAD
=======

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:layout_marginTop="5dp"
            android:text="@string/location" />

        <TextView
            android:id="@+id/datesAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:layout_marginTop="2.5dp"
            android:text="@string/datesAvailable" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2.5dp"
            android:text="@string/price" />
>>>>>>> small changes with string and formtatting stuff.

    </LinearLayout>

    <LinearLayout
<<<<<<< HEAD
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/datesAvailable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dp"
            android:layout_marginTop="2.5dp"
            android:text="@string/datesAvailable"
            android:textSize="16sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2.5dp"
            android:text="@string/price"
            android:textSize="16sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/black"/>
=======
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/reserveButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reserveButton" />

        <Button
            android:id="@+id/viewProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/viewProfile" />
>>>>>>> small changes with string and formtatting stuff.

    </LinearLayout>

</LinearLayout>