<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cs121.myparkspot.parkListFrag"
    android:background="@color/colorWhite"
    android:paddingStart="5dp"
    android:paddingEnd="5dp">

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signout"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:backgroundTint="@color/lightBlue"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myProfile"
            android:fontFamily="casual"
            android:backgroundTint="@color/lightBlue"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/create_spot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createSpot"
            android:fontFamily="casual"
            android:backgroundTint="@color/lightBlue"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/maps_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Maps View"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>

    <ListView
        android:id="@+id/parkList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/colorClear"
        android:dividerHeight="5dp"></ListView>

</LinearLayout>
