<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:weightSum="10"
        tools:context="com.cs121.myparkspot.ViewParkingSpotActivity">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/locatedAt"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/fullAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceViewPSpotAct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/priceViewPSpot"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/priceActual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/instructionsVPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/instructionsVPA"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/listingInstructionsVPA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/reservationAvailability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/reservationAvailability"
            android:textSize="16sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/startDateSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/startDateSection"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/listingStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/endDateSection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/endDateSection"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/listingEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="@color/black"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reserve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/designed_button"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:layout_marginBottom="10dp"
            android:text="@string/reserveButton"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:fontFamily="casual"
            android:textStyle="bold"/>

        <ProgressBar
            android:id="@+id/progress_bar_3"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

    </LinearLayout>

</ScrollView>